Adding test data

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 
 <center>
 <body>
-    <a href="/index.html">
+    <a href="/index">
         <button class="button button1">Home</button>
     </a>
-    <a href="/discord.html">
+    <a href="/discord">
         <button class="button button1">Discord Development</button>
     </a>
-    <a href="/fivem.html">
+    <a href="/fivem">
         <button class="button button1">FiveM Development</button>
     </a>
     <a href="https://discord.gg/6wxdQMrruw">
