--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
             font-family: 'Roboto', sans-serif;
             font-size: 40px;
         }
+        h2 {
+            color: white;
+            font-family: 'Roboto', sans-serif;
+            font-size: 25px;
+        }
         p {
-            color: red;
+            color: white;
+        }
+        footer {
+            color: white;
+            font-family: 'Roboto', sans-serif;
+            font-size: 12px;
         }
         .button {
             border: none;
@@ -50,19 +60,21 @@
     </style>
 </head>
 <body>
-    <h1>Atlas Development</h1>
-    <a href="/index.html">
-        <button class="button button1">Home</button>
-    </a>
-    <a href="/discord.html">
-        <button class="button button1">Discord Development</button>
-    </a>
-    <a href="/fivem.html">
-        <button class="button button1">FiveM Development</button>
-    </a>
-    <a href="https://discord.gg/6wxdQMrruw">
-        <button class="button button1">Support Server</button>
-    </a>
-    <footer>©️ Atlas Development 2024</footer>
+    <div class="header">
+        <h1>Atlas Development</h1>
+    </div>
+
+    <a href="/index.html"><button class="button button1">Home</button></a>
+    <a href="/discord.html"><button class="button button1">Discord Development</button></a>
+    <a href="/fivem.html"><button class="button button1">FiveM Development</button></a>
+    <a href="https://discord.gg/6wxdQMrruw"><button class="button button1">Support Server</button></a>
+
+    <h2>
+        Welcome to Atlas Development!
+    </h2>
 </body>
+
+<footer>
+    <p>©️ Atlas Development 2024</p>
+</footer>
 </html>
