--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 </head>
 <body>
     <div class="header">
+        <img src="/favicon.ico" alt="Atlas Development Logo" />
         <h1>Atlas Development</h1>
     </div>
 
