--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
             font-family: 'Roboto', sans-serif;
             font-size: 40px;
         }
+        .header img {
+            float: left;
+            width: 100px;
+            height: 100px;
+            background: #555;
+        }
+
+        .header h1 {
+            position: relative;
+            top: 18px;
+            left: 10px;
+        }
         h2 {
             color: white;
             font-family: 'Roboto', sans-serif;
@@ -65,9 +77,9 @@
         <h1>Atlas Development</h1>
     </div>
 
-    <a href="/index.html"><button class="button button1">Home</button></a>
-    <a href="/discord.html"><button class="button button1">Discord Development</button></a>
-    <a href="/fivem.html"><button class="button button1">FiveM Development</button></a>
+    <a href="/index"><button class="button button1">Home</button></a>
+    <a href="/discord"><button class="button button1">Discord Development</button></a>
+    <a href="/fivem"><button class="button button1">FiveM Development</button></a>
     <a href="https://discord.gg/6wxdQMrruw"><button class="button button1">Support Server</button></a>
 
     <h2>
