--- a/tos.html
+++ b/tos.html
@@ -100,7 +100,7 @@
     <a href="https://discord.gg/6wxdQMrruw"><button class="button button1">Support Server</button></a>
 
     <h2>
-        FiveM Development
+        Terms of Service
     </h2>
 
     <footer>
