--- a/fivem.html
+++ b/fivem.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Atlas Development - FiveM</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- add this for mobile responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,43 +10,43 @@
     <style>
         body {
             background-color: black;
-            text-align: center; /* center the content */
-            margin: 0; /* add this to remove default margin */
-            padding: 0; /* add this to remove default padding */
+            text-align: center;
+            margin: 0;
+            padding: 0;
         }
         h1 {
             color: blue;
             font-family: 'Roboto', sans-serif;
             font-size: 40px;
-            margin: 0; /* add this to remove default margin */
+            margin: 0;
         }
       .header {
-            display: flex; /* add this to make the image and text align properly */
-            align-items: center; /* add this to make the image and text align properly */
-            justify-content: center; /* add this to center the image and text horizontally */
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
       .header img {
             width: 100px;
             height: 100px;
             background: #555;
-            margin: 10px; /* add this to add some space around the image */
+            margin: 10px;
         }
         h2 {
             color: white;
             font-family: 'Roboto', sans-serif;
             font-size: 25px;
-            margin: 20px 0; /* add this to add some space around the heading */
+            margin: 20px 0;
         }
         p {
             color: white;
-            margin: 20px 0; /* add this to add some space around the paragraph */
+            margin: 20px 0;
         }
         footer {
             color: white;
             font-family: 'Roboto', sans-serif;
             font-size: 12px;
-            text-align: center; /* center the footer text */
-            padding: 20px; /* add this to add some space around the footer */
+            text-align: center;
+            padding: 20px;
         }
       .button {
             border: none;
@@ -77,7 +77,7 @@
             text-decoration: none;
         }
 
-        /* add this media query to make the buttons stack on top of each other on mobile devices */
+
         @media only screen and (max-width: 768px) {
           .button {
                 display: block;
