--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             font-size: 25px;
             margin: 20px 0;
         }
+        h3 {
+            color: white;
+            font-family: 'Roboto', sans-serif;
+            font-size: 20px;
+            margin: 20px 0;
+        }
         p {
             color: white;
             margin: 20px 0;
@@ -45,6 +51,13 @@
             color: white;
             font-family: 'Roboto', sans-serif;
             font-size: 12px;
+            text-align: center;
+            padding: 20px;
+        }
+        b {
+            color: white;
+            font-family: 'Roboto', sans-serif;
+            font-size: 15px;
             text-align: center;
             padding: 20px;
         }
@@ -76,6 +89,13 @@
             display: inline-block;
             text-decoration: none;
         }
+        .offer {
+            text-align: left;
+            padding-left: 100px;
+        }
+        .offer-heading {
+            font-family: 'Roboto', sans-serif;
+        }
 
         @media only screen and (max-width: 768px) {
            .button {
@@ -98,11 +118,16 @@
     <a href="/tos"><button class="button button1">Terms of Service</button></a>
     <a href="https://discord.gg/6wxdQMrruw"><button class="button button1">Support Server</button></a>
 
-    <h2>
-        Welcome to Atlas Development!
+    <h2 class="offer">
+        What do we offer?
     </h2>
+    <b class="offer">
+        Test
+    </b>
 
     <footer>
+        <p>Support</p>
+        <p></p>
         <p>©️ Atlas Development 2024</p>
     </footer>
 </body>
