Added Terms of Service

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </b>
 
     <footer>
-        <p>Support</p>
+        <a><p>Support</p></a>
         <p></p>
         <p>©️ Atlas Development 2024</p>
     </footer>
