--- a/tos.html
+++ b/tos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Atlas Development - FiveM</title>
+    <title>Atlas Development - Terms of Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,12 +20,12 @@
             font-size: 40px;
             margin: 0;
         }
-      .header {
+        .header {
             display: flex;
             align-items: center;
             justify-content: center;
         }
-      .header img {
+        .header img {
             width: 100px;
             height: 100px;
             background: #555;
@@ -48,7 +48,7 @@
             text-align: center;
             padding: 20px;
         }
-      .button {
+        .button {
             border: none;
             color: grey;
             padding: 10px 20px;
@@ -62,12 +62,12 @@
             border-radius: 4px;
             font-family: 'Roboto', sans-serif;
         }
-      .button1 {
+        .button1 {
             background-color: black;
             color: white;
             border: 2px solid black;
         }
-      .button1:hover {
+        .button1:hover {
             background-color: #363c47;
             color: white;
             border: 2px solid #363c47;
@@ -75,6 +75,35 @@
         a {
             display: inline-block;
             text-decoration: none;
+        }
+        div.list {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: #333;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            color: white;
+        }
+        div.list2 {
+            max-width: 600px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: #333;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            color: white;
+            text-align: center;
+        }
+        ol.tos {
+            padding-left: 20px;
+        }
+        ol.tos li {
+            padding: 10px;
+            border-bottom: 1px solid #444;
+        }
+        ol.tos li:last-child {
+            border-bottom: none;
         }
 
         @media only screen and (max-width: 768px) {
@@ -101,6 +130,39 @@
     <h2>
         Terms of Service
     </h2>
+    <div class="list">
+    <ol class="tos">
+        <li>Atlas reserves the right to change these Terms of Service without warning so it is recommended you review them often</li>
+        <li>Atlas reserves the right to leave any server or deny a customer access if it is deemed to be unacceptable in terms of the content it promotes at any time or similar without warning as viewed by the Atlas Development team</li>
+        <li>Atlas has opt-in systems that can, but are not limited to, removal of users, altering of roles and the editing of messages</li>
+        <li>Unauthorised use of ‘owner’ commands (such as attempting to change the Atlas profile picture, status or banner) will result in your action being logged with your guild name and user name and ID in a Discord channel only to be shown by Atlas authorised developers</li>
+        <li>Atlas reserves the right to charge users for access to commands as per the Discord Developer Terms of Service</li>
+        <li>Atlas has a commitment to privacy and will make all attempts to prevent sensisitve data being leaked. If you find a flaw, please join the support server and report it. Read more in our Privacy Policy</li>
+        <li>Attempts to ‘DDOS’ or purposely degrade the performance of the application (Atlas) will result in a ban from our services</li>
+        <li>Atlas is not liable for any damage caused to your guilds due to the extensive information provided about each command and the warnings in place</li>
+    </ol>
+    </div>
+
+    <h2>
+        Privacy Policy
+    </h2>
+    <div class="list">
+        <ol class="tos">
+            <li>Information Atlas Collects - Upon adding Atlas to a server, it logs the guild name, guild owner, guild ID and guild member count</li>
+            <li>Personal Information - Atlas does not collect personal information through its use in Discord servers including messages sent, etc. unless authorised through the use of a bot command</li>
+            <li>Any information that is collected is only stored on the hardware Atlas is run in the form of ‘Databases’ and is not sold to 3rd parties in any form</li>
+        </ol>
+    </div>
+
+    <h2>
+        Contact Information
+    </h2>
+    <div class="list2">
+        <ol class="tos">
+            <ul>Contact Email - dukeofcheesebusiness@gmail.com</ul>
+            <ul>Support Server - https://discord.gg/6wxdQMrruw</ul>
+        </ol>
+    </div>
 
     <footer>
         <p>©️ Atlas Development 2024</p>
