Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2D06LNR05F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2D06LNR05F');
+</script>
 <body>
     <div class="header">
         <img src="/favicon.ico" alt="Atlas Development Logo"/>
