--- a/tos.html
+++ b/tos.html
@@ -144,6 +144,7 @@
         <li>Atlas reserves the right to change these Terms of Service without warning so it is recommended you review them often</li>
         <li>Atlas reserves the right to leave any server or deny a customer access if it is deemed to be unacceptable in terms of the content it promotes at any time or similar without warning as viewed by the Atlas Development team</li>
         <li>Atlas has opt-in systems that can, but are not limited to, removal of users, altering of roles and the editing of messages</li>
+        <li>Atlas has an administrator DM command and can be opted out from by running '?optdm' in each server you do not want DMs from</li>
         <li>Unauthorised use of ‘owner’ commands (such as attempting to change the Atlas profile picture, status or banner) will result in your action being logged with your guild name and user name and ID in a Discord channel only to be shown by Atlas authorised developers</li>
         <li>Atlas reserves the right to charge users for access to commands as per the Discord Developer Terms of Service</li>
         <li>Atlas has a commitment to privacy and will make all attempts to prevent sensisitve data being leaked. If you find a flaw, please join the support server and report it. Read more in our Privacy Policy</li>
